# Software-2026

./: GUI_CameraOnly  GUI_Controller  LICENSE  README.md  pyproject.toml  requirements.txt  run.py
ROV_CONTROLER/: Controller_Testing  Controller_Testing.py  GUI_Controller.py  Python_Topside_Controls.py
src/: Python_Topside_Controls.py  controller_math.py  main_window.py  workers.py
src/ROV_Arduino_Control_Code/: ROV_Arduino_Control_Code.ino
src/VP_onboard_control/: VP_onboard_control.ino
src/arduino_control/: arduino_control.ino
src/controller/: Python_Topside_Controls.py
src/controller/ROV_Arduino_Control_Code/: ROV_Arduino_Control_Code.ino
src/scripts/: crab_counting.py  crab_detection_model.py  reciever.py
src/utils/: controller_mapping.py
testing/: GUI_CameraOnly
testing/balsom/: controller.py  test_joystick.py
