[project]
name = "Software-2026"
description = "Topside control software for Western Wave's 2026 underwater ROV."
authors = [{name = "Nicholas Balsom", email = "NicholasBalsom@gmail.com"}]
readme = {file = "README.md", content-type = "text/markdown"}
# requires-python = ">=3.9" # add when testing is complete
version = "0.0.1"
dependencies = [
    "PyQt6",
    "opencv-python",
    "numpy",
    "pygame-ce",
    "pyserial",
    "ultralytics"
]

[project.urls]
repository = "https://github.com/Western-Wave-Robotics/Software-2026"

[project.optional-dependencies]
dev = [
    "black", 
    "isort"
]

[tool.black]
line-length = 100

[tool.isort]
profile = "black"

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"